--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "venturecraft/revisionable",
+    "name": "kangyasin/revisionable",
     "license": "MIT",
     "description": "Keep a revision history for your models without thinking, created as a package for use with Laravel",
     "keywords": ["model", "laravel", "ardent", "revision", "history"],
-    "homepage": "http://github.com/venturecraft/revisionable",
+    "homepage": "http://github.com/kangyasin/revisionable",
     "authors": [
         {
             "name": "Chris Duell",
@@ -12,8 +12,8 @@
     ],
     "abandoned": true,
     "support": {
-        "issues": "https://github.com/VentureCraft/revisionable/issues",
-        "source": "https://github.com/VentureCraft/revisionable"
+        "issues": "https://github.com/kangyasin/revisionable/issues",
+        "source": "https://github.com/kangyasin/revisionable"
     },
     "require": {
         "php": ">=5.3.0",
