--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "~4.0|~5.0|~5.1"
+        "illuminate/support": "^6.0|^7.0|^8.0"
     },
     "autoload": {
         "classmap": [
